--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@things-factory/state-base",
-  "version": "0.9.0",
+  "version": "1.0.0-alpha.1",
   "main": "dist-server/index.js",
   "browser": "client/index.js",
   "things-factory": true,
@@ -23,8 +23,8 @@
     "migration:revert": "node ./node_modules/typeorm/cli.js migration:revert"
   },
   "dependencies": {
-    "@things-factory/auth-base": "^0.9.0",
-    "@things-factory/shell": "^0.9.0"
+    "@things-factory/auth-base": "^1.0.0-alpha.1",
+    "@things-factory/shell": "^1.0.0-alpha.1"
   },
   "devDependencies": {}
 }
